# leopold-fc750r

./: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
boards/: nrf52840dk_nrf52840.overlay
include/: logo.file
src/: LIP1400_25C.inc  LIP3000_25C.inc  fuel_gauge.c  fuel_gauge.h  main.c
